feat: [MC-1035] Pass through enableRankByRegion (#75)
* fix: openapi-typescript failed to run

TypeError [ERR_UNKNOWN_FILE_EXTENSION]: Unknown file extension .mts for scripts/generateOpenAPITypes.mts

* feat: pass enableRankingByRegion to recommendation-api

* fix: pass enableRankingByRegion to query
